<resources>
    <string name="app_name">My Notes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_date">Edit date:</string>
    <string name="save_date">edit date</string>
    <string name="edit_content">edit content</string>
    <string name="delete_note">Delete note</string>
    <string name="new_note">new note</string>
    <string name="list_of_notes">list of notes</string>
    <string name="menu">menu</string>
    <string name="about_app">about app</string>
    <string name="close">Close</string>
    <string name="about">This is some awesome and pretty ugly application</string>
    <string name="drawer_home">Home</string>
    <string name="drawer_note_list">All notes</string>
    <string name="drawer_about">About My Notes</string>
    <string name="drawer_exit">Exit</string>
    <string name="drawer_header_text">My notes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="settings">Settings</string>
    <string name="drawer_settings">Settings</string>
    <string name="bottom_dialog_text">SETTINGS BUTTON IS PRESSED</string>
    <string name="show_toast">show toast</string>
    <string name="show_notification">show notification</string>
    <string name="alert_message_title">Alert!</string>
    <string name="alert_message_content">Are you sure wanna to exit?</string>
    <string name="add_note_message">Add Note is pressed</string>
    <string name="new_note_message">new note button is pressed!</string>
    <string name="notification_title">Notification Sample</string>
    <string name="notification_content">Testing new notification button</string>
    <string name="exiting_message">Exiting application...</string>
    <string name="exit_cancelling_message">Cancelled</string>
    <string name="entered_text_message">"Entered text: "</string>
    <string name="settings_button_message">settings button is pressed!</string>
    <string name="try_again">Try again</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="title_name">Title name</string>
    <string name="date_creation">Date creation</string>
    <string name="time_creation">Time creation</string>
    <string name="note_content_some_text">Note content some text</string>
    <string name="save_button_message">Save button is pressed</string>
    <string name="add">Add</string>
    <string name="clear">clear list</string>
    <string name="edit_note">Edit note</string>
    <string name="show_calendar">Calendar</string>
</resources>