<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_baseline_info_24"
        android:title="@string/about_app"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_exit"
        android:icon="@drawable/ic_baseline_close_24"
        android:title="@string/close"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/add"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_clear"
        android:icon="@drawable/ic_baseline_clear_all_24"
        android:title="@string/clear"
        app:showAsAction="never" />

</menu>