<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.EditNoteFragment">

    <EditText
        android:id="@+id/edit_title_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/big_margin"
        android:background="@drawable/edit_text_style"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="@dimen/default_padding"
        android:textColor="@color/dark_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor"
        tools:text="@string/title_name" />

    <TextView
        android:id="@+id/note_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_margin"
        android:textColor="@color/dark_grey"
        app:layout_constraintEnd_toStartOf="@+id/note_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_title_text"
        tools:text="@string/date_creation" />

    <TextView
        android:id="@+id/note_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_margin"
        android:textColor="@color/dark_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/note_date"
        app:layout_constraintTop_toBottomOf="@id/edit_title_text"
        tools:text="@string/time_creation" />

    <EditText
        android:id="@+id/edit_content_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/big_margin"
        android:layout_marginTop="@dimen/big_margin"
        android:background="@drawable/edit_text_style"
        android:gravity="start"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:padding="@dimen/default_padding"
        android:textColor="@color/dark_grey"
        app:layout_constraintBottom_toTopOf="@id/button_block_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/note_date"
        tools:ignore="LabelFor"
        tools:text="@string/note_content_some_text" />

    <LinearLayout
        android:id="@+id/button_block_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_margin"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_content_text">

        <Button
            android:id="@+id/edit_button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/edit_button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_weight="1"
            android:text="@string/save" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>