<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/default_padding">

    <TextView
        android:id="@+id/note_title"
        android:textColor="@color/dark_grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

    <TextView
        android:id="@+id/note_date"
        android:layout_width="wrap_content"
        android:textColor="@color/dark_grey"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/note_time"
        android:layout_width="wrap_content"
        android:textColor="@color/dark_grey"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/note_content"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/default_margin"
        android:textColor="@color/dark_grey"
        android:layout_weight="1"
        android:background="@color/white"
        android:scrollbars="vertical" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/edit_date"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_date"
            android:textColor="@color/dark_grey" />

        <Button
            android:id="@+id/edit_content"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_content"
            android:textColor="@color/dark_grey" />

        <Button
            android:id="@+id/delete_note"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_note"
            android:textColor="@color/dark_grey" />

    </LinearLayout>

</LinearLayout>